styles.css
.margin-space {
    margin: auto;
    max-width: 1100px;
}

/* svg icon code */
/* -----
SVG Icons - svgicons.sparkk.fr
----- */

.svg-icon {
    width: 1.5em;
    height: 1.5em;
}

.svg-icon path,
.svg-icon polygon,
.svg-icon rect {
    fill: #fdfdfd;
}

/* .svg-icon circle {
    stroke: #ffffff;
    stroke-width: 1;
} */

.nav-list {
    top: 3.3rem;
    right: 9rem;
}

.about-img-mob {
    max-width: 100%;
    height: auto;
}

/* arrow css */
.arrows {
    width: 60px;
    height: 72px;
    position: absolute;
    left: 50%;
    margin-left: -30px;
    bottom: 20px;
}

.arrows path {
    stroke: #070c0f;
    fill: transparent;
    stroke-width: 1px;
    animation: arrow 2s infinite;
    -webkit-animation: arrow 2s infinite;
}

@keyframes arrow {
    0% {
        opacity: 0;
    }
    40% {
        opacity: 1;
    }
    80% {
        opacity: 0;
    }
    100% {
        opacity: 0;
    }
}

@-webkit-keyframes arrow {
    0% {
        opacity: 0;
    }
    40% {
        opacity: 1;
    }
    80% {
        opacity: 0;
    }
    100% {
        opacity: 0;
    }
}

.arrows path.a1 {
    animation-delay: -1s;
    -webkit-animation-delay: -1s;
}

.arrows path.a2 {
    animation-delay: -0.5s;
    -webkit-animation-delay: -0.5s;
}

.arrows path.a3 {
    animation-delay: 0s;
    -webkit-animation-delay: 0s;
}

/* hex shaped cards */
.hex-events-div {
    margin: auto;
    /* margin-top: 50px; */
    max-width: 1000px;
    grid-template-columns: repeat(8, 1fr);
    grid-auto-rows: 200px;
    grid-gap: 14px;
    padding-bottom: 50px;
}

.upcoming-events-mobile {
    display: none;
}

.hex-div {
    width: 240px;
    height: 265px;
    -webkit-clip-path: polygon(
        50% 0%,
        100% 25%,
        100% 75%,
        50% 100%,
        0% 75%,
        0% 25%
    );
    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
}

.hex-div:first-child {
    grid-row-start: 1;
    grid-column: 2 / span 2;
}

.hex-div:nth-child(2) {
    grid-row-start: 1;
    grid-column: 4 / span 2;
}

.hex-div:nth-child(3) {
    grid-row-start: 1;
    grid-column: 6 / span 2;
}

.hex-div:nth-child(4) {
    grid-row-start: 2;
    grid-column: 1 / span 2;
}

.hex-div:nth-child(5) {
    grid-row-start: 2;
    grid-column: 3 / span 2;
}

.hex-div:nth-child(6) {
    grid-row-start: 2;
    grid-column: 5 / span 2;
}

.hex-div:nth-child(7) {
    grid-row-start: 2;
    grid-column: 7 / span 2;
}

.hex-div:nth-child(8) {
    grid-row-start: 3;
    grid-column: 2 / span 2;
}

.hex-div:nth-child(9) {
    grid-row-start: 3;
    grid-column: 4 / span 2;
}

.hex-div:nth-child(10) {
    grid-row-start: 3;
    grid-column: 6 / span 2;
}

/* members cards */
@property --rotate {
    syntax: "<angle>";
    initial-value: 132deg;
    inherits: false;
}

:root {
    --member-card-height: 65vh;
    --member-card-width: calc(var(--member-card-height) / 1.5);
}

.member-container {
    display: flex;
}

.member-card {
    background: #191c29;
    width: var(--member-card-width);
    height: var(--member-card-height);
    font-size: 1.5em;
    color: rgb(88 199 250 / 0%);
    cursor: pointer;
}

.member-card:hover {
    color: rgb(88 199 250 / 100%);
    transition: color 1s;
}
.member-card:hover:before,
.member-card:hover:after {
    animation: none;
    opacity: 0;
}

.member-card::before {
    content: "";
    width: 104%;
    height: 102%;
    border-radius: 8px;
    background-image: linear-gradient(
        var(--rotate),
        #7e0fff,
        #0fffc1 43%,
        #7e0fff
    );
    position: absolute;
    z-index: -1;
    top: -1%;
    left: -2%;
    animation: spin 2.5s linear infinite;
}

.member-card::after {
    position: absolute;
    content: "";
    top: calc(var(--member-card-height) / 6);
    left: 0;
    right: 0;
    z-index: -1;
    height: 100%;
    width: 100%;
    margin: 0 auto;
    transform: scale(0.8);
    filter: blur(calc(var(--member-card-height) / 6));
    background-image: linear-gradient(
        var(--rotate),
        #5ddcff,
        #3c67e3 43%,
        #4e00c2
    );
    opacity: 1;
    transition: opacity 0.5s;
    animation: spin 2.5s linear infinite;
}

@keyframes spin {
    0% {
        --rotate: 0deg;
    }
    100% {
        --rotate: 360deg;
    }
}

/* form */
.formcontainer h2 {
    color: #08e7f7;
}
.formcontainer .row100 {
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.formcontainer .row100 .col {
    padding: 0 10px;
    margin: 30px 0 10px;
    transition: 0.5s;
}
.formcontainer .row100 .inputbox {
    counter-reset: #45f3ff;
}
span {
    color: #08e7f7;
}
.formcontainer .row100 .inputbox input,
.formcontainer .row100 .inputbox .textarea textarea {
    background: transparent;
    padding: 0 10px;
    color: #000;
}
.formcontainer .row100 .inputbox .text {
    padding: 0 10px;
    transition: 0.5s;
}
.formcontainer .row100 .inputbox input:focus + .text,
.formcontainer .row100 .inputbox input:valid + .text {
    top: -35px;
    left: -10px;
}
.formcontainer .row100 .inputbox .line {
    height: 2px;
    background: #08e7f7;
    transition: 0.5s;
}
.formcontainer .row100 .inputbox input:focus ~ .line,
.formcontainer .row100 .inputbox input:valid ~ .line {
    height: 100%;
}
.formcontainer .row100 .inputbox .textarea {
    /*  */
    height: 100px;
    padding: 10px 0;
}

.formcontainer .row100 .inputbox textarea:focus + .text,
.formcontainer .row100 .inputbox textarea:valid + .text {
    top: -35px;
    left: -10px;
}
.formcontainer .row100 .inputbox textarea:focus ~ .line,
.formcontainer .row100 .inputbox textarea:valid ~ .line {
    height: 100%;
}
button[type="submit"] {
    padding: 7px 35px;
    background: #45f3ff;
    color: #000;
}

/* responsive media controls */
@media screen and (max-width: 800px) {
    .nav-list {
        flex-direction: column;
        top: 4rem;
        right: 2rem;
        align-items: flex-end;
        justify-content: space-around;
    }

    .nav-list > a {
        padding-top: 2rem;
    }

    .landing-desktop {
        display: none;
    }

    .landing-mobile {
        display: flex;
    }

    .initiative-div {
        width: 200px;
        height: 200px;
    }

    .upcoming-events-desktop {
        display: none;
    }

    .hex-div-mob {
        width: 200px;
        height: 200px;
        margin-top: 10px;
        -webkit-clip-path: polygon(
            50% 0%,
            100% 25%,
            100% 75%,
            50% 100%,
            0% 75%,
            0% 25%
        );
        clip-path: polygon(
            50% 0%,
            100% 25%,
            100% 75%,
            50% 100%,
            0% 75%,
            0% 25%
        );
    }

    .upcoming-events-mobile {
        display: block;
    }
}

